--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
 
     <!-- ============[a enlever our top client]===================================== -->
-    <!--     
+        
     <div class="site-section bg-light">
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
@@ -383,7 +383,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- =============[ a enlever our blog]=========================================== -->
     <!-- <div class="site-section bg-white">
