--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="services.html" class="nav-link">Services</a></li>
-                <li><a href="barber-shop.html" class="nav-link">Barber Shop</a></li>
-                <li><a href="about.html" class="nav-link">About</a></li>
-                <!-- <li><a href="blog.html" class="nav-link">Blog</a></li> -->
+                <li class="active"><a href="index.html" class="nav-link">Des extensions de qualité</a></li>
+                <li><a href="services.html" class="nav-link">Quels Shampoings</a></li>
+                <li><a href="barber-shop.html" class="nav-link">Quel Entretien</a></li>
+                <li><a href="about.html" class="nav-link">Prestations-Rdv</a></li>
+                <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
               </ul>
             </nav>
@@ -100,7 +100,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
-              <h1 class="mb-3">PRENEZ UN TEMPS POUR VOUS <br>EXTENSION À FROID </h1>
+              <h1 class="mb-3">PRENEZ UN TEMPS POUR VOUS !</h1>
               <p>Extensions naturelles uniquement Qualité "Rémy Hair"</p>
               <p><a href="#" class="btn btn-primary">Learn More</a></p>
             </div>
@@ -122,7 +122,7 @@
 
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5 text-center">
-            <h3 class="scissors text-center">Welcome To R'EXTENSE!</h3>
+            <h3 class="scissors text-center">Bienvenue sur R'EXTENSE!</h3>
             <p class="mb-5 lead">L'extension cheveux naturel à froid permet d'avoir les cheveux longs et de gagner en
               volume pour coiffer vos
               cheveux (queue de cheval, tresse épis...) changer de tête, de couleur de cheveux selon vos envies.
@@ -142,9 +142,8 @@
       <div class="container">
         <div class="row justify-content-center  mb-5">
           <div class="col-md-7 text-center">
-            <h3 class="scissors text-center">Services &amp; Pricing</h3>
-            <p class="mb-5 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nesciunt nemo vel earum
-              maxime neque!</p>
+            <h3 class="scissors text-center">Services &amp; Prix</h3>
+            <p class="mb-5 lead">N'hésitez pas à me contacter pour plus de renseignements!</p>
 
             <p class="text-center">
               <a href="#" class="btn btn-primary custom-prev">Prev</a>
@@ -217,12 +216,16 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center">
-            <h3 class="scissors text-center">More Hair Styles</h3>
-            <p class="mb-5 lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nesciunt nemo vel earum
-              maxime neque!</p>
+            <h3 class="scissors text-center">EXTENSION À FROID </h3>
+            <p class="mb-5 lead">La technique de pose d'extensions cheveux à froid anneaux est idéale si vous avez les cheveux fragiles
+              puisqu'elle n'abîmera pas vos mèches cheveux naturels. Pensez toujours à prendre soin de vos mèches de
+              cheveux en évitant la coloration et en utilisant des shampoing et soins adaptés. </p>
           </div>
         </div>
-        <div class="row hair-style">
+
+
+
+        <!-- <div class="row hair-style">
           <div class="col-lg-4 col-md-4 col-sm-6 col-12">
             <a href="#" class="place">
               <img src="images/more hair style.jpg" alt="Image placeholder">
@@ -244,8 +247,11 @@
               <span>$50.00 only</span>
             </a>
           </div>
+        </div> -->
 
-        </div>
+
+
+
       </div>
     </div>
     <!-- END section -->
@@ -340,11 +346,13 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
           <div class="col-7 text-center mb-5">
-            <h2 class="scissors text-center">Our Top Client Says</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo assumenda, dolorum necessitatibus eius earum voluptates sed!</p>
+            <h2 class="scissors text-center">EXTENSION À FROID </h2>
+            <p class="lead">L'extension à froid anneaux est le meilleur des rajouts cheveux si votre chevelure est fragile de base ou si
+              vous faites des colorations régulièrement. En effet, la technique de pose à froid n'altère pas la qualité du
+              cheveu tant que les shampoing et soins sont adaptés pour les extensions.</p>
           </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="testimonial-2">
               <div class="d-flex v-card align-items-center mb-4">
@@ -381,7 +389,10 @@
               
             </div>
           </div>
-        </div>
+        </div> -->
+
+
+        
       </div>
     </div>
 
