--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                <li class="active"><a href="index.html" class="nav-link">Des extensions de qualité</a></li>
-                <li><a href="services.html" class="nav-link">Quels Shampoings</a></li>
-                <li><a href="barber-shop.html" class="nav-link">Quel Entretien</a></li>
-                <li><a href="about.html" class="nav-link">Prestations-Rdv</a></li>
+                <li class="active"><a href="index.html" class="nav-link">Home</a></li>
+                <!-- <li class="active"><a href="index.html" class="nav-link">Des extensions de qualité</a></li> -->
+
+                <li><a href="services.html" class="nav-link">Des extensions de qualité</a></li>
+                <li><a href="barber-shop.html" class="nav-link">Quels Shampoings</a></li>
+                <li><a href="about.html" class="nav-link">Quel entretient</a></li>
                 <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
+                <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
               </ul>
             </nav>
           </div>
@@ -216,7 +218,7 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center">
-            <h3 class="scissors text-center">EXTENSION À FROID </h3>
+            <h3 class="scissors text-center">Extensions à froid </h3>
             <p class="mb-5 lead">La technique de pose d'extensions cheveux à froid anneaux est idéale si vous avez les cheveux fragiles
               puisqu'elle n'abîmera pas vos mèches cheveux naturels. Pensez toujours à prendre soin de vos mèches de
               cheveux en évitant la coloration et en utilisant des shampoing et soins adaptés. </p>
@@ -346,7 +348,7 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
           <div class="col-7 text-center mb-5">
-            <h2 class="scissors text-center">EXTENSION À FROID </h2>
+            <h2 class="scissors text-center">Méthode utilisée </h2>
             <p class="lead">L'extension à froid anneaux est le meilleur des rajouts cheveux si votre chevelure est fragile de base ou si
               vous faites des colorations régulièrement. En effet, la technique de pose à froid n'altère pas la qualité du
               cheveu tant que les shampoing et soins sont adaptés pour les extensions.</p>
@@ -460,7 +462,7 @@
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-7 text-center mb-5">
-            <h2 class="text-white scissors primary-color-icon text-center">Quality Hair</h2>
+            <h2 class="text-white scissors primary-color-icon text-center">"Rémy Hair"</h2>
             <p class="lead text-white mb-5">Extensions naturelles uniquement Qualité "Rémy Hair"</p>
             <p><a href="#" class="btn btn-primary">Contact Me Now</a></p>
           </div>
