--- a/barber-shop.html
+++ b/barber-shop.html
@@ -59,12 +59,12 @@
 
               <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
                 <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                  <li><a href="index.html" class="nav-link">Home</a></li>
-                  <li><a href="services.html" class="nav-link">Services</a></li>
-                  <li class="active"><a href="barber-shop.html" class="nav-link">Barber Shop</a></li>
-                  <li><a href="about.html" class="nav-link">About</a></li>
-                  <li><a href="blog.html" class="nav-link">Blog</a></li>
-                  <li><a href="contact.html" class="nav-link">Contact</a></li>
+                  <li class="active"><a href="index.html" class="nav-link">Home</a></li>
+                  <li><a href="services.html" class="nav-link">Des extensions de qualité</a></li>
+                  <li><a href="barber-shop.html" class="nav-link">Quels Shampoings</a></li>
+                  <li><a href="about.html" class="nav-link">Quel entretient</a></li>
+                  <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
+                  <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
                 </ul>
               </nav>
             </div>
