--- a/index.html
+++ b/index.html
@@ -79,8 +79,6 @@
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <!-- <li class="active"><a href="index.html" class="nav-link">Des extensions de qualité</a></li> -->
-
                 <li><a href="services.html" class="nav-link">Des extensions de qualité</a></li>
                 <li><a href="barber-shop.html" class="nav-link">Quels Shampoings</a></li>
                 <li><a href="about.html" class="nav-link">Quel entretient</a></li>
@@ -476,7 +474,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
-            <img src="images/photo r extense page garde n2.jpg" alt="Image" class="img-fluid mb-5">
+            <img src="images/photo M.jpg" alt="Image" class="img-fluid mb-5">
             <h2 class="footer-heading mb-3">About me</h2>
             <p>Technicienne spécialiste des extensions de cheveux à froid, je mets mon expertise à votre service. </p>
           </div>
