--- a/services.html
+++ b/services.html
@@ -349,8 +349,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
-            <img src="images/img_1.jpg" alt="Image" class="img-fluid mb-5">
-            <h2 class="footer-heading mb-3">About Us</h2>
+            <img src="images/photo M.jpg" alt="Image" class="img-fluid mb-5">
+            <h2 class="footer-heading mb-3">About Me</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
               blind texts. </p>
           </div>
