--- a/about.html
+++ b/about.html
@@ -59,13 +59,13 @@
 
               <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
                 <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                  <li><a href="index.html" class="nav-link">Home</a></li>
-                  <li><a href="services.html" class="nav-link">Services</a></li>
-                  <li><a href="barber-shop.html" class="nav-link">Barber Shop</a></li>
-                  <li class="active"><a href="about.html" class="nav-link">About</a></li>
-                  <!-- <li><a href="blog.html" class="nav-link">Blog</a></li> -->
-                  <li><a href="contact.html" class="nav-link">Contact</a></li>
-                </ul>
+                  <li class="active"><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="services.html" class="nav-link">Des extensions de qualité</a></li>
+                <li><a href="barber-shop.html" class="nav-link">Quels Shampoings</a></li>
+                <li><a href="about.html" class="nav-link">Quel entretient</a></li>
+                <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
+                <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
+              </ul>
               </nav>
             </div>
 
@@ -80,13 +80,14 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
-              <h1 class="mb-3">About Me</h1>
-              <p>Technicienne spécialiste des
+              <h1 class="mb-3">ENTRETENIR SES EXTENSIONS POUR
+                LES AVOIR TOUJOURS AU TOP </h1>
+              <!-- <p>Technicienne spécialiste des
                 extensions de cheveux à froid, je mets mon
                 expertise à votre service – sur Gargenville
                 et les communes limitrophes à mon domicile ou
                 directement chez vous.
-                
+              </p> -->
             </div>
           </div>
         </div>
