text &pic entretien

--- a/barber-shop.html
+++ b/barber-shop.html
@@ -64,7 +64,7 @@
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="services.html" class="nav-link">Des extensions de qualité</a></li>
                 <li><a href="barber-shop.html" class="nav-link">Quels Shampoings</a></li>
-                <li><a href="about.html" class="nav-link">Quel entretient</a></li>
+                <li><a href="about.html" class="nav-link">Quel entretien</a></li>
                 <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
                 <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
               </ul>
@@ -277,15 +277,16 @@
           <div class="col-lg-3">
             <img src="images/photo M.jpg" alt="Image" class="img-fluid mb-5">
             <h2 class="footer-heading mb-3">About Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-              blind texts. </p>
+            <p>Technicienne spécialiste des extensions de cheveux à froid.
+              je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
+              directement chez vous.</p>
           </div>
           <div class="col-lg-8 ml-auto">
             <div class="row">
               <div class="col-lg-6 ml-auto">
                 <h2 class="footer-heading mb-4">Quick Links</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">About Me</a></li>
                   <li><a href="#">Testimonials</a></li>
                   <li><a href="#">Terms of Service</a></li>
                   <li><a href="#">Privacy</a></li>
