--- a/blog.html
+++ b/blog.html
@@ -212,8 +212,10 @@
         <div class="row">
           <div class="col-lg-3">
             <img src="images/img_1.jpg" alt="Image" class="img-fluid mb-5">
-            <h2 class="footer-heading mb-3">About Us</h2>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+            <h2 class="footer-heading mb-3">About Me</h2>
+                <p>Technicienne spécialiste des extensions de cheveux à froid.
+                  je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
+                  directement chez vous.</p>
           </div>
           <div class="col-lg-8 ml-auto">
             <div class="row">
