--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="services.html" class="nav-link">Des extensions de qualité</a></li>
                 <li><a href="barber-shop.html" class="nav-link">Quels Shampoings</a></li>
-                <li><a href="about.html" class="nav-link">Quel entretient</a></li>
+                <li><a href="about.html" class="nav-link">Quel entretien</a></li>
                 <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
                 <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
               </ul>
@@ -478,7 +478,9 @@
           <div class="col-lg-3">
             <img src="images/photo M.jpg" alt="Image" class="img-fluid mb-5">
             <h2 class="footer-heading mb-3">About me</h2>
-            <p>Technicienne spécialiste des extensions de cheveux à froid, je mets mon expertise à votre service. </p>
+            <p>Technicienne spécialiste des extensions de cheveux à froid.
+              je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
+              directement chez vous.</p>
           </div>
           <div class="col-lg-8 ml-auto">
             <div class="row">
