modif text home

--- a/services.html
+++ b/services.html
@@ -90,10 +90,8 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
-              <h1 class="mb-3">Qualité des extensions "Remy Hair"</h1>
-              <p>Lorsque l’on parle d’extensions de cheveux, les termes Remy hair ou non Remy hair apparaitront
-                régulièrement notamment dans les conversations des professionnels de la coiffure. Cependant, la plupart
-                d’entre vous ne savent pas ce que cela signifie réellement. <br>
+              <h1 class="mb-3">EXTENSIONS NATURELLES</h1>
+              <p>Lorsque l’on parle d’extensions de cheveux, les termes Remy hair ou non Remy hair apparaitront régulièrement notamment dans les conversations des professionnels de la coiffure. Cependant, la plupart d’entre vous ne savent pas ce que cela signifie réellement. <br>
                 Vous trouverez donc toutes les réponses à ce sujet. </p>
               <p><a href="#" class="btn btn-primary">Learn More</a></p>
             </div>
@@ -109,14 +107,7 @@
         <div class="row justify-content-center text-center mb-5">
           <div class="col-7 text-center mb-5">
             <h2 class="scissors text-center">QU’EST-CE QUE LA QUALITE « REMY HAIR » ?</h2>
-            <p class="lead">Tout d’abord, le Remy Hair est un label de qualité des extensions de cheveux et non une
-              marque. Les
-              cheveux Remy Hair sont des cheveux vierges et naturels qui n’ont subi aucun traitement chimique. Ils sont
-              considérés comme les meilleurs cheveux pour les extensions capillaires car ce sont des cheveux naturels
-              et non synthétiques.<br>
-              L’une des caractéristiques les plus importantes des cheveux de qualité Remy Hair est qu’ils sont prélevés
-              directement sur la tête du donneur. De plus les cheveux récoltés doivent être coupés et surtout assemblés
-              dans le même sens et doivent provenir impérativement de la même personne. </p>
+            <p class="lead">Le Remy Hair est un label de qualité des extensions de cheveux et non une marque. Ce sont des cheveux vierges et naturels qui n’ont subi aucun traitement chimique. Ils sont considérés comme les meilleurs cheveux pour les extensions capillaires car ce sont des cheveux naturels et non synthétiques.</p>
           </div>
         </div>
 
@@ -272,17 +263,11 @@
           <div class="col-7 text-center mb-5">
             <h2 class="text-white scissors primary-color-icon text-center">LES DIFFÉRENCES ENTRE LES CHEVEUX REMY HAIR
               ET NON-REMY HAIR</h2>
-            <p class="lead text-white mb-5">Ils existent plusieurs différences entre les cheveux de qualité « Remy hair
-              » et non « Remy hair ». Je vais
-              vous expliquer plus en détails quelles sont les principales différences.</p>
-            <h2 class="text-white scissors primary-color-icon text-center">La façon de collecter des cheveux</h2>
-            <p class="lead text-white mb-5"> La différence la plus importante est la façon de collecter les cheveux.
-              Les cheveux Remy Hair sont collectés par une méthode qui garantit l’aspect naturel des cheveux.
-              Les mèches collectées sont toutes alignées dans le même sens. <br>
-              A l’inverse, les cheveux non Remy Hair sont collectés d’une façon aléatoire et assemblés en vrac. Ceci
-              entraine forcément une mauvaise qualité du cheveu puisque les mèches ne vont faire que de s’emmêler.
-              De plus, les cheveux Remy Hair sont assemblés directement sur la tête du donneur. Alors qu’au contraire,
-              les cheveux non Remy Hair sont généralement ramassés sur le sol ou bien récupérés dans une brosse. </p>
+              <h3 class="text-white text-center">La façon de collecter les cheveux. </h3>
+            <p class="lead text-white mb-5">ILes cheveux Remy Hair sont collectés par une méthode qui garantit l’aspect naturel des cheveux. Ils sont tous alignées dans le même sens.</p>
+            <!-- <p class="lead text-white mb-5">Ils existent plusieurs différences entre les cheveux de qualité « Remy hair » et non « Remy hair ». Je vais vous expliquer plus en détails quelles sont les principales différences.</p> -->
+              <h3 class="text-white text-center">La qualité des cheveux</h3>
+            <p class="lead text-white mb-5">Les cheveux Remy Hair ont une apparence plus naturelle, plus brillante et plus lisse, que les cheveux qui ne sont pas « Remy Hair ». Cela est dû à la méthode de collecte des cheveux. </p>
             <p><a href="#" class="btn btn-primary">Contactez Moi</a></p>
           </div>
         </div>
@@ -294,19 +279,9 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-5">
           <div class="col-7 text-center mb-5">
-            <h2 class="scissors text-center">La qualité des cheveux</h2>
-            <p class="lead">Les cheveux Remy Hair ont une apparence plus naturelle, plus brillante et plus lisse, que
-              les
-              cheveux qui
-              ne sont pas « Remy Hair ». Cela est dû à la méthode de collecte des cheveux. </p>
-            En effet, les cheveux prélevés directement sur tête du donneur sont donc de qualité Remy hair, et ont cette
-            apparence plus naturelle, brillante et lisse par rapport aux non Remy hair. Comme expliqué précédemment,
-            les cheveux sont alignés dans le même sens. C’est pourquoi cette méthode garantit que les cuticules des
-            cheveux ne sont pas abimées. <br>
-            En revanche, les cheveux non Remy hair sont des cheveux abimés, qui s’emmêlent et se matifient
-            facilement puisque les cuticules des cheveux sont orientées dans différents sens. Ils possèdent également
-            un éclat artificiel puisqu’ils ont subi de nombreux traitements chimiques pour les rendre brillants et
-            lisses.
+            <h2 class="scissors text-center">La durée de vie</h2>
+            <p class="lead">Les extensions de cheveux Remy hair sont des cheveux de bien meilleure qualité. C’est pour cette raison qu’ils durent plus longtemps. Il est possible de les garder de 2 mois jusqu’à une année complète. </p>
+          <!-- <p class="lead">En effet, les cheveux prélevés directement sur tête du donneur sont donc de qualité Remy hair, et ont cette apparence plus naturelle, brillante et lisse par rapport aux non Remy hair. </p> -->
           </div>
         </div>
       </div>
@@ -319,20 +294,13 @@
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-7 text-center mb-5">
-            <h2 class="text-white scissors primary-color-icon text-center">La durée de vie</h2>
-            <p class="lead text-white mb-5">Les extensions de cheveux Remy hair sont des cheveux de bien meilleure qualité. C’est pour cette raison
-              qu’ils durent plus longtemps. En effet, tout dépend du type de pose, mais il est possible de les garder de 2
-              mois jusqu’à une année complète. <br>
-              A contrario, pour les cheveux non Remy hair, leur durée de vie est plus courte, à cause de leur qualité plus
-              médiocre. Ces cheveux risquent fortement d’être endommagés après seulement quelques lavages de
-              cheveux.</p>
+            <!-- <h2 class="text-white scissors primary-color-icon text-center">La durée de vie</h2>
+            <p class="lead text-white mb-5">Les extensions de cheveux Remy hair sont des cheveux de bien meilleure qualité. C’est pour cette raison qu’ils durent plus longtemps. Il est possible de les garder de 2 mois jusqu’à une année complète. </p> -->
             <h2 class="text-white scissors primary-color-icon text-center">Pour conclure</h2>
-            <p class="lead text-white mb-5"> , les cheveux Remy hair sont les meilleurs cheveux pour les extensions. Ils sont plus chers que
-              les autres, mais cela est justifié par leur durée de vie plus longue que les non Remy hair. Ainsi les extensions
-              naturelles de qualité Remy hair peuvent être réutilisées plusieurs fois, du moment que l’entretien a bien
-              été réalisé. <br>
-              Enfin, le meilleur avantage des Remy hair est que vous pouvez les boucler, les lisser et les laver comme vos
-              cheveux naturels sans aucun dommage.</p>
+            <p class="lead text-white mb-5">les cheveux Remy hair sont les meilleurs cheveux pour les extensions. Ils sont plus chers que les autres, mais cela est justifié par leur durée de vie plus longue que les non Remy hair.</p>
+            <p class="lead text-white mb-5">Enfin, le meilleur avantage des Remy hair est que vous pouvez les boucler, les lisser et les laver comme vos cheveux naturels sans aucun dommage.</p>
+           
+            
             <p><a href="#" class="btn btn-primary">Contactez Moi</a></p>
           </div>
         </div>
