pict servic+ /home

--- a/services.html
+++ b/services.html
@@ -62,12 +62,11 @@
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="services.html" class="nav-link">Des extensions de qualité</a></li>
-                <li><a href="barber-shop.html" class="nav-link">Quels Shampoings</a></li>
-                <li><a href="about.html" class="nav-link">Quel entretien</a></li>
+                <li><a href="services.html" class="nav-link">Extensions Naturelles</a></li>
+                <li><a href="barber-shop.html" class="nav-link">Shampoings & Soins</a></li>
+                <li><a href="about.html" class="nav-link">L'entrtien</a></li>
                 <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
                 <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
               </ul>
             </nav>
           </div>
