--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
                   <li class="active"><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="services.html" class="nav-link">Extensions Naturelles</a></li>
                 <li><a href="barber-shop.html" class="nav-link">Shampoings & Soins</a></li>
-                <li><a href="about.html" class="nav-link">L'entrtien</a></li>
+                <li><a href="about.html" class="nav-link">L'entretien</a></li>
                 <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
                 <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
               </ul>
