modif text entretien

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
           <div class="col-3 ">
             <div class="site-logo">
-              <a href="index.html">Barberz</a>
+              <a href="index.html">R'EXTENSE</a>
             </div>
           </div>
 
@@ -83,13 +83,10 @@
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
-              <h1 class="mb-3">ENTRETENIR SES EXTENSIONS POUR
-                LES AVOIR TOUJOURS AU TOP </h1>
-              <!-- <p>Technicienne spécialiste des
-                extensions de cheveux à froid, je mets mon
-                expertise à votre service – sur Gargenville
-                et les communes limitrophes à mon domicile ou
-                directement chez vous.
+              <h1 class="mb-3">L’ENTRETIEN</h1>
+              <!-- <p>Après la pose des extensions de cheveux, il vient naturellement la question de l’entretien de ses rajouts de cheveux ! Il est donc normal de se poser des questions.<br>
+                Voici donc quelques astuces à connaitre sur l’entretien des extensions à froid.
+                
               </p> -->
             </div>
           </div>
@@ -106,17 +103,20 @@
             <img src="images/photo 2 quels shampoings.jpg" alt="Image placeholder">
           </a>
         </div> -->
-        <p class="mb-5 lead">Après la pose des extensions de cheveux, il vient naturellement la question de l’entretien
+        <h3>Après la pose des extensions de cheveux, il vient naturellement la question de l’entretien de ses rajouts de cheveux ! Il est donc normal de se poser des questions.
+          Voici donc quelques astuces à connaitre sur l’entretien des extensions à froid.
+          </h3>
+        <!-- <p class="mb-5 lead">Après la pose des extensions de cheveux, il vient naturellement la question de l’entretien
           de ses rajouts de
-          cheveux ! Il est donc normal de se poser des questions du type :
-        <ul class="questions_type">
+          cheveux ! Il est donc normal de se poser des questions du type : -->
+        <!-- <ul class="questions_type">
           <li>Combien de fois laver ses extensions de cheveux par semaine ? </li>
           <li>Comment faire de bons shampoings et soins à ses mèches de cheveux ?</li>
           <li>Si mes rajouts cheveux s’emmêlent, comment les démêler ?</li>
           <li>Quelle brosse utiliser pour coiffer ses extensions à chaud ? ...</li>
         </ul>
-        </p>
-        <p class="mb-5 lead">Voici donc quelques astuces à connaitre sur l’entretien des extensions à froid.</p>
+        </p> -->
+        <!-- <p class="mb-5 lead">Voici donc quelques astuces à connaitre sur l’entretien des extensions à froid.</p> -->
       </div>
     </div>
 
@@ -141,21 +141,8 @@
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5 text-center">
             <h3 class="scissors text-center">n° 1 : Démêler ses extensions:</h3>
-            <p class="mb-5 lead">Tout d’abord, le démêlage des extensions est crucial
-              pour leur durée de vie. Beaucoup de personnes
-              pensent que ce n’est pas une étape importante. Et
-              pourtant si. <br>Une brosse en poils de sanglier est l’accessoire
-              indispensable pour cette étape car elle ne tire pas
-              sur les rajouts et démêle correctement. Elle est
-              douce pour les cheveux et respectent votre
-              chevelure.<br>Attention : faites des séparations !!! Commencez
-              par les pointes en tenant vos extensions à la racine
-              pour ne pas trop tirer dessus et les faire tomber.<br>
-              Et enfin, remontez jusqu’à la racine et répétez
-              l’opération jusqu’à ce que toutes les extensions
-              soient démêlées. Le démêlage de vos extensions doit être quotidien. Je sais bien que cela prend du temps,
-              mais il est impératif de le faire matin et soir.
-            </p>
+            <p class="mb-5 lead">Une brosse en « poils de sanglier » est l’accessoire indispensable pour cette étape car elle ne tire pas sur les rajouts et démêle correctement. Elle est douce pour les cheveux et respectent votre chevelure.</p>
+            <p class="mb-5 lead">  Attention : Commencez par les pointes en tenant vos extensions à la racine pour ne pas trop tirer dessus et les faire tomber.</p>
             <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
           </div>
         </div>
@@ -177,23 +164,17 @@
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5 text-center">
             <h3 class="scissors text-center">n° 2 : Faire un bon shampoing:</h3>
-            <p class="mb-5 lead">Utilisez un shampoing spécial extension de cheveux ! Pourquoi ?<br>
+            <p class="mb-5 lead">Utilisez un shampoing spécial extension de cheveux ! Pourquoi ?
               Il est plus concentré en soin nourrissant et il ne contient pas de silicone ni de glycérine !
-              Les extensions ne glisseront pas et la kératine ne sera pas abimée.
+              
             </p>
-            <p class="mb-5 lead">Les étapes à respecter pour réaliser
-              correctement son shampoing :
+            <!-- <p class="mb-5 lead">Les étapes à respecter pour réaliser
+              correctement son shampoing : -->
 
             <ol>
-              <li>La tête toujours en arrière, jamais la tête en
-                avant pour éviter d’emmêler les extensions.</li>
-              <li>. Ne pas frotter fort le cuir chevelu au moment
-                des shampoings mais faire des mouvements
-                circulaires. Il est inutile de frictionner les
-                cheveux.
-              </li>
-              <li> Enfin, rincez et répétez l’opération une
-                seconde fois si nécessaire.</li>
+              <li>La tête toujours en arrière.</li>
+              <li>Ne pas frotter fort le cuir chevelu au moment des shampoings mais faire des mouvements circulaires.</li>
+              <li>Enfin, rincez et répétez l’opération une seconde fois si nécessaire.</li>
               </ul>
               </p>
               <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
@@ -217,20 +198,19 @@
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5 text-center">
             <h3 class="scissors text-center">n°3: Le masque Idéal:</h3>
-            <p class="mb-5 lead">Choisir également un masque sans silicone et sans
-              glycérin. Le masque est lui aussi un produit concentré.
-              Son application est particulièrement simple.
-            <ol>
+            <p class="mb-5 lead">Choisir également un masque sans silicone et sans glycérin. Le masque est lui aussi un produit concentré</p>
+            <p class="mb-5 lead">Ce masque s’utilise une à deux fois par semaine pour une hydratation intense immédiate.
+              <!-- <ol>
               <li>.Mettez tout d’abord le masque sur vos mi-longueurs
                 et pointes (trop en mettre ne sert à rien).</li>
               <li>.Démêlez toujours en commençant par la pointe.</li>
               <li>.Puis rincez abondamment. Ce masque s’utilise une à
                 deux fois par semaine pour une hydratation intense immédiate.</li>
-            </ol>
+            </ol> -->
             </p>
 
-            <p class="mb-5 lead">Vos extensions seront donc brillantes et dociles pour le coiffage.
-            </p>
+            <!-- <p class="mb-5 lead">Vos extensions seront donc brillantes et dociles pour le coiffage.
+            </p> -->
             <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
           </div>
         </div>
@@ -254,21 +234,23 @@
             <h3 class="scissors text-center">n°4: Le spray sans rinçage:
             </h3>
             <p class="mb-5 lead">Ce spray est souvent de même composition que le shampoing et le masque.<br>
-              La seule différence est qu’il ne se rince pas. Il vous permet donc un entretien rapide des extensions.
-            <ol>
+
+La seule différence est qu’il ne se rince pas. Il vous permet donc un entretien rapide des extensions.
+
+            <!-- <ol>
               <li>1.Vous pouvez l’utiliser en entretien journalier si vous n’avez pas le
                 temps de faire un masque.</li>
               <li>.Vous pouvez aussi l’utiliser sur les extensions non mouillées pour
                 vous aider à les recoiffer si elles ont pris un faux pli.<br>
                 Vaporisez une dizaine de fois sur l’ensemble de la chevelure, sur
                 cheveux secs ou mouillés. Puis démêlez délicatement vos cheveux.</li>
-            </ol>
+            </ol> -->
             </p>
             <p class="mb-5 lead">
               Petit conseil : attachez vos extensions en tresses avant de vous coucher pour éviter de les emmêler.
             </p>
-            <p>Vous avez désormais tous les trucs et astuces pour réaliser un bon entretien et préserver le plus longtemps
-              possible vos extensions de cheveux.</p>
+            <p class="mb-5 lead">Vous avez désormais tous les trucs et astuces pour réaliser un bon entretien et préserver le plus longtemps possible vos extensions de cheveux.</p>
+
             <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
           </div>
         </div>
