--- a/entretien.html
+++ b/entretien.html
@@ -61,13 +61,14 @@
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="services.html" class="nav-link">Extensions Naturelles</a></li>
-                <li><a href="barber-shop.html" class="nav-link">Shampoings & Soins</a></li>
-                <li><a href="about.html" class="nav-link">L'entretien</a></li>
-                <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
-                <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
-              </ul>
+                <ul class="site-menu main-menu js-clone-nav ml-auto ">
+                  <li class="active"><a href="index.html" class="nav-link">Home</a></li>
+                  <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                  <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
+                  <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
+                  <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                  <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
+                </ul>
             </nav>
           </div>
 
@@ -155,7 +156,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="img-years">
-              <img src="images/photo 2 entretenir les extensions.jpg" alt="Image" class="img-fluid">
+              <img src="images/photo 1 quels shampoings.jpg" alt="Image" class="img-fluid">
               <!-- <div class="year">
                 <span>-10% <span>POUR TOUTES NOUVELLES <br>CLIENTES </span></span>
               </div> -->
@@ -189,7 +190,7 @@
         <div class="row">
           <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="img-years">
-              <img src="images/photo 1 entretenir les extensions.jpg" alt="Image" class="img-fluid">
+              <img src="images/photo 3 entretenir les extensions.jpg" alt="Image" class="img-fluid">
               <!-- <div class="year">
                 <span>-10% <span>POUR TOUTES NOUVELLES <br>CLIENTES </span></span>
               </div> -->
