--- a/extensions-naturelles.html
+++ b/extensions-naturelles.html
@@ -61,13 +61,14 @@
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="services.html" class="nav-link">Extensions Naturelles</a></li>
-                <li><a href="barber-shop.html" class="nav-link">Shampoings & Soins</a></li>
-                <li><a href="about.html" class="nav-link">L'entretien</a></li>
-                <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
-                <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
-              </ul>
+                <ul class="site-menu main-menu js-clone-nav ml-auto ">
+                  <li class="active"><a href="index.html" class="nav-link">Home</a></li>
+                  <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                  <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
+                  <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
+                  <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                  <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
+                </ul>
             </nav>
           </div>
 
@@ -256,7 +257,7 @@
 
 
     <div class="site-section section-3" data-stellar-background-ratio="0.5"
-      style="background-image: url('images/photo 1 qualité des extensions.jpg');">
+      style="background-image: url('images/photo 4 sur site.jpg');">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-7 text-center mb-5">
@@ -289,7 +290,7 @@
 
 
     <div class="site-section section-3" data-stellar-background-ratio="0.5"
-      style="background-image: url('images/photo 3 qualité des extensions.jpg');">
+      style="background-image: url('images/devis sur mesure.jpg');">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-7 text-center mb-5">
