--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>Barberz &mdash; Website Template by Colorlib</title>
+  <title>R'EXTENSE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -79,11 +79,11 @@
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
                 <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="services.html" class="nav-link">Extensions Naturelles</a></li>
-                <li><a href="barber-shop.html" class="nav-link">Shampoings & Soins</a></li>
-                <li><a href="about.html" class="nav-link">L'entretien</a></li>
-                <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
-                <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
+                <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
+                <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
+                <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
               </ul>
             </nav>
           </div>
@@ -96,7 +96,7 @@
 
     <div class="ftco-blocks-cover-1">
       <div class="site-section-cover overlay" data-stellar-background-ratio="0.5"
-        style="background-image: url('images/photo 3 qualité des extensions.jpg')">
+        style="background-image: url('images/photo 1 sur site.jpg')">
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
@@ -507,7 +507,7 @@
     
     
     <div class="site-section section-3" data-stellar-background-ratio="0.5"
-      style="background-image: url('images/R extense page de garde.jpg');">
+      style="background-image: url('images/photo 2 sur site.jpg');">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-7 text-center mb-5">
