--- a/photos.html
+++ b/photos.html
@@ -61,13 +61,14 @@
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="services.html" class="nav-link">Extensions Naturelles</a></li>
-                <li><a href="barber-shop.html" class="nav-link">Shampoings & Soins</a></li>
-                <li><a href="about.html" class="nav-link">L'entretien</a></li>
-                <li><a href="blog.html" class="nav-link">Photos Avant Après</a></li>
-                <li><a href="contact.html" class="nav-link">Prestations & Rdv</a></li>
-              </ul>
+                <ul class="site-menu main-menu js-clone-nav ml-auto ">
+                  <li class="active"><a href="index.html" class="nav-link">Home</a></li>
+                  <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                  <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
+                  <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
+                  <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                  <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
+                </ul>
             </nav>
           </div>
 
@@ -79,7 +80,7 @@
 
     <div class="ftco-blocks-cover-1">
       <div class="site-section-cover overlay" data-stellar-background-ratio="0.5"
-        style="background-image: url('images/photo 6 sur site.jpg')">
+        style="background-image: url('images/devis sur mesure.jpg')">
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-7">
