--- a/prestations-rdv.html
+++ b/prestations-rdv.html
@@ -61,13 +61,14 @@
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
               <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="services.html" class="nav-link">Services</a></li>
-                <li><a href="barber-shop.html" class="nav-link">Barber Shop</a></li>
-                <li><a href="about.html" class="nav-link">About</a></li>
-                <li class="active"><a href="blog.html" class="nav-link">Blog</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
-              </ul>
+                <ul class="site-menu main-menu js-clone-nav ml-auto ">
+                  <li class="active"><a href="index.html" class="nav-link">Home</a></li>
+                  <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                  <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
+                  <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
+                  <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                  <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
+                </ul>
             </nav>
           </div>
 
