--- a/single.html
+++ b/single.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
   <head>
-    <title>Barberz &mdash; Website Template by Colorlib</title>
+    <title>R'EXTENSE</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -46,7 +46,7 @@
 
             <div class="col-3 ">
               <div class="site-logo">
-                <a href="index.html">Barberz</a>
+                <a href="index.html">R'EXTENSE</a>
               </div>
             </div>
 
@@ -59,14 +59,13 @@
 
               <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
                 <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                  <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                    <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
-                    <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
-                    <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
-                    <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
-                    <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
-                  </ul>
+                  <li ><a href="index.html" class="nav-link">Home</a></li>
+                  <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                  <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
+                  <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
+                  <li class="active"><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                  <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
+                </ul>
               </nav>
             </div>
 
