--- a/extensions-naturelles.html
+++ b/extensions-naturelles.html
@@ -53,17 +53,15 @@
           <div class="col-9  text-right">
 
 
-            <span class="d-inline-block d-lg-none"><a href="#"
-                class="text-white site-menu-toggle js-menu-toggle py-5 text-white"><span
-                  class="icon-menu h3 text-white"></span></a></span>
+            <span class="d-inline-block d-lg-none"><a href="#" class="text-white site-menu-toggle js-menu-toggle py-5 text-white"><span class="icon-menu h3 text-white"></span></a></span>
+
 
 
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
-              <ul class="site-menu main-menu js-clone-nav ml-auto ">
                 <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                  <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                  <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                  <li ><a href="index.html" class="nav-link">Home</a></li>
+                  <li class="active"><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
                   <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
                   <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
                   <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
