--- a/photos.html
+++ b/photos.html
@@ -60,13 +60,12 @@
 
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
-              <ul class="site-menu main-menu js-clone-nav ml-auto ">
                 <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                  <li class="active"><a href="index.html" class="nav-link">Home</a></li>
+                  <li ><a href="index.html" class="nav-link">Home</a></li>
                   <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
                   <li><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
                   <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
-                  <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                  <li class="active"><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
                   <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
                 </ul>
             </nav>
