erase photo shampoo

--- a/shampoings-soins.html
+++ b/shampoings-soins.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <title>Barberz &mdash; Website Template by Colorlib</title>
@@ -53,21 +53,20 @@
           <div class="col-9  text-right">
 
 
-            <span class="d-inline-block d-lg-none"><a href="#"
-                class="text-white site-menu-toggle js-menu-toggle py-5 text-white"><span
-                  class="icon-menu h3 text-white"></span></a></span>
+            <span class="d-inline-block d-lg-none"><a href="#" class="text-white site-menu-toggle js-menu-toggle py-5 text-white"><span class="icon-menu h3 text-white"></span></a></span>
+
 
 
 
             <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
-                <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                  <li><a href="index.html" class="nav-link">Home</a></li>
-                  <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
-                  <li class="active"><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
-                  <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
-                  <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
-                  <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
-                </ul>
+              <ul class="site-menu main-menu js-clone-nav ml-auto ">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                <li class="active"><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
+                <li><a href="entretien.html" class="nav-link">L'entretien</a></li>
+                <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
+              </ul>
             </nav>
           </div>
 
@@ -141,12 +140,20 @@
           <div class="col-md-7 text-center">
             <h3 class="scissors text-center">QUEL SHAMPOING UTILISER ?</h3>
 
-            <div class="row justify-content-center  mb-5">
+            <!-- <div class="row justify-content-center  mb-5">
               <a>
                 <img src="images/photo 2 quels shampoings.jpg" alt="Image placeholder">
               </a>
-            </div>
-
+            </div> -->
+            <!-- <div class="row justify-content-center  mb-5">
+              <div class="col-md-7 text-center">
+                <div class="row justify-content-center  mb-5">
+                  <a>
+                    <img src="images/photo 2 quels shampoings.jpg" alt="Image placeholder">
+                  </a>
+                </div>
+              </div>
+            </div> -->
 
             <p class="mb-5 lead">Les shampoings pour extensions de cheveux sont des shampoings neutres, ne contenant
               aucune molécule qui abîme les cheveux. Généralement, les shampoings pour extensions sont très doux car ils
